crates/mega-evm/tests/satin/snapshots/satin__detention__a_refill_after_the_read_does_not_lift_the_cap.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&OutcomeView::new(&run.outcome)"
---
{
  "result": {
    "kind": "revert",
    "reason": "MegaLimitExceeded(ComputeGas, 20022108)",
    "output": "0x84b902670000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000131835c",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 20035775,
    "state": 0,
    "history": 27280,
    "history_bytes": 310,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 20063055
  },
  "result_gas": {
    "total_gas_spent": 20063055,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": {
    "kind": "ComputeGas",
    "limit": 20022108,
    "used": 20020775
  },
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000bef000": "unchanged",
    "0x0000000000000000000000000000000000d00000": {
      "balance": "0x0",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x4200000000000000000000000000000000000019": "unchanged",
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
