crates/mega-evm/tests/satin/snapshots/satin__detention__a_stipend_is_not_compute.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&views"
---
{
  "a transaction carrying value, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000002)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d02",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20019563,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 21000,
      "gas_used": 20046843
    },
    "result_gas": {
      "total_gas_spent": 20046843,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000002,
      "used": 19998563
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a transaction carrying value, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000002)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d02",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20019563,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 21000,
      "gas_used": 20046843
    },
    "result_gas": {
      "total_gas_spent": 20046843,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 21000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000002,
      "used": 19998563
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x1",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a value-carrying child, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20009318)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001315166",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20022879,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20050159
    },
    "result_gas": {
      "total_gas_spent": 20050159,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20009318,
      "used": 20007879
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "a value-carrying child, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20009318)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001315166",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20022879,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 20050159
    },
    "result_gas": {
      "total_gas_spent": 20050159,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20009318,
      "used": 20007879
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
