crates/mega-evm/tests/satin/snapshots/satin__detention__a_transaction_touching_the_beneficiary_is_detained_from_the_start.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&views"
---
{
  "an applied authority, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20030375,
      "state": 218790,
      "history": 39688,
      "history_bytes": 451,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20288853
    },
    "result_gas": {
      "total_gas_spent": 20288853,
      "state_gas_spent": 218790,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 451,
      "write_records": 1
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xa054baea62dc6909117990c74e5096082e8759217f12398cd032eda540c5c449",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "an applied authority, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20030375,
      "state": 218790,
      "history": 39688,
      "history_bytes": 451,
      "reservoir_remaining": 99741522,
      "floor": 15000,
      "gas_used": 20288853
    },
    "result_gas": {
      "total_gas_spent": 20288853,
      "state_gas_spent": 218790,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99741522
    },
    "usage": {
      "data_size": 451,
      "write_records": 1
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xa054baea62dc6909117990c74e5096082e8759217f12398cd032eda540c5c449",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "the recipient, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20013559,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20040839
    },
    "result_gas": {
      "total_gas_spent": 20040839,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x1f34c42b12d7f03ae855136d811b0574dc27c4c009de66ae66fb8cece13c873a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "the recipient, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20013559,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 20040839
    },
    "result_gas": {
      "total_gas_spent": 20040839,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x1f34c42b12d7f03ae855136d811b0574dc27c4c009de66ae66fb8cece13c873a",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "the sender, gas limit 100000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20013559,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20040839
    },
    "result_gas": {
      "total_gas_spent": 20040839,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "the sender, gas limit 300000000": {
    "result": {
      "kind": "revert",
      "reason": "MegaLimitExceeded(ComputeGas, 20000000)",
      "output": "0x84b9026700000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000001312d00",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20013559,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 20040839
    },
    "result_gas": {
      "total_gas_spent": 20040839,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": {
      "kind": "ComputeGas",
      "limit": 20000000,
      "used": 19998559
    },
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
